# ngsi-ld-client-tester

./: .dockerignore  .env  .gitignore  README.md  docker-compose-orion-with-notifier-consumer.yaml  docker-compose-orion-with-notifier-consumer.yml  docker-compose-periodic-subscriptions.yml  docker-compose-scorpio-all-in-one-with-notifier-tester.yaml  docker-compose-scorpio-all-in-one.yaml  docker-compose-scorpio-kafka-with-notifier-tester.yaml  docker-compose-scorpio-with-notifier-consumer-on-change.yaml  docker-compose-scorpio-with-notifier-consumer-periodic.yaml  docker-compose-scorpio-with-notifier-consumer.yaml  docker-compose-with-notifier-consumer.yml  ngsi-ld-api-schemas.yaml  ngsi-ld-api-sensor-model.yaml
iot-sensors-tester/: .env  append-attrs-iot-device-sensors.py  append-iot-device-property-desc.py  append-iot-device-property-name.py  create-humidity-sensor-entity.py  create-iot-device-entity-from-dict.py  create-iot-device-entity-from-json.py  create-iot-device-entity.py  create-iot-device-with-sensors-entities-orion.py  create-iot-device-with-sensors-entities-scorpio-with-temperature-observedAt.py  create-iot-device-with-sensors-entities-scorpio-with-temperature-subproperties.py  create-iot-device-with-sensors-entities-scorpio.py  create-temperature-sensor-entity.py  create-vehicular-entities-scorpio-test.py  create-vehicular-entities-scorpio.py  delete-iot-sensors-entities.py  pyproject.toml  query-humidity-sensor-entities.py  query-iot-device-entities-sysAttrs.py  query-iot-device-entities.py  query-temperature-sensor-entities.py  query-vehicular-entities.py  retrieve-humidity-sensor-entity.py  retrieve-iot-device-and-sensors-entities-orion.py  retrieve-iot-device-and-sensors-entities-scorpio.py  retrieve-iot-device-entity.py  retrieve-temperature-sensor-entity.py  (+6 more)
(+541 files in other folders)
