[tool.poetry]
name = "interface-explorer"
version = "0.1.0"
description = ""
authors = ["Daniel González-Sánchez <daniel.gonzalez.sanchez@upm.es>"]

[tool.poetry.dependencies]
python = "^3.9.5"
fastapi = {extras = ["all"], version = "^0.95.2"}
ngsi_ld_client = { git = "https://github.com/giros-dit/python-ngsi-ld-client.git", branch = "1.6.1" }
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = ">=4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
